--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "generator-kiricon-website": "^1.0.1"
+    "generator-kiricon-website": "^1.0.1",
+    "webpack": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "eslint-config-google": "^0.7.1"
+    "eslint-config-google": "^0.7.1",
+    "webpack-dev-server": "^2.4.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
