--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "webpack-dev-server": "^2.4.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node_modules/.bin/webpack-dev-server"
   },
   "repository": {
     "type": "git",
